updated with rswag, and devise setup
