# config/routes.rb
@@ -1,11 +1,11 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
-  devise_for :users, controllers: { sessions: 'api/sessions', registrations: 'api/registrations' }
 
   namespace :api do
-
-    resources :registrations, only: [:create]
+    devise_for :users, controllers: { 
+      sessions: 'devise/sessions', 
+      registrations: 'devise/registrations' }
     resources :expenses
     resources :incomes
     resources :categories
